--- a/style.css
+++ b/style.css
@@ -3,39 +3,27 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  display: block;
+  display: flex;
   justify-content: center;
   align-items: center;
-  
-
+  height: 100vh;
+  background: linear-gradient(#30142b, #2772a1);
 }
 
 /* Style the app container */
 .app {
   display: flex;
-  flex-direction: column;
-  height: 100vh;
+  align-items: center;
   justify-content: center;
-  margin: 0 auto;
   max-width: 1200px;
   padding: 20px;
   box-sizing: border-box;
+  border-radius: 10px;
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
 }
 
-@import url(https://fonts.googleapis.com/css?family=Poppins:300);
-html {
-  height: 100%;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  background: linear-gradient(#30142b, #2772a1);
-}
 
 .login-page {
-  width: 400px;
   padding: 8% 0 0;
   margin: auto;
 }
@@ -194,9 +182,12 @@ h2 {
   background-image: url("pics/aaa.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  flex: 1;
+  flex: 5;
   display: flex;
-  flex-direction: column;
+  flex-direction:column;
+  height: 100vh;
+  max-width:1800px;
+  
 }  
 
 .active {
@@ -281,6 +272,19 @@ h2 {
   background-color: none;
   margin-top: auto;
 }
+
+.emoji-icon {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  background-image: url('pics/images.png'); /* Replace with the path to your emoji icon image */
+  background-size: cover;
+  background-position: center;
+  background-color: none;
+  cursor: pointer;
+  margin-right: 10px; 
+}
+
 
 #message-input {
   flex: 1;
